--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Sharon Faith Macasaol# your name (or website title) here
 logo: "/images/profilee.JPG?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  I am a Software Engineer with full knowledge and experience in PHP and Swift. My most recent experience on my last contract has been as a front and back-end  mobile developer. I have a Bachelor’s Degree in Information Technology and have 5 years experience developing web and mobile applications.
+ 
   <br><br>
-  Second description 
   <br>
   
 theme: jekyll-theme-minimal
